@@ -1,6 +1,7 @@
 
 Version Next
 
+    - Added <dellroad:rpmdist> macro to macros.xml
     - Relax requirment for servlet 3.0 in SpringContextApplication
     - Added IdGenerator, IdMapper, and IdMappingMarshaller
     - Added SpringXSLUpdateTransformConfigurer
